// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aglint/change-detection 1`] = `
{
  "stderr": "",
  "stdout": "
<dirname>/lint-change-detection.data.ts
  0:0  error  Parsing error: Enabling "project" does nothing when "projectService" is enabled. You can remove the "project" setting

✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`aglint/require-explicit-generic 1`] = `
{
  "stderr": "",
  "stdout": "
<dirname>/lint-require-explicit-generic.data.ts
  0:0  error  Parsing error: Enabling "project" does nothing when "projectService" is enabled. You can remove the "project" setting

✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`aglint/validate-module-registration 1`] = `
{
  "stderr": "",
  "stdout": "
<dirname>/lint-validate-module-registration.data.ts
  0:0  error  Parsing error: Enabling "project" does nothing when "projectService" is enabled. You can remove the "project" setting

✖ 1 problem (1 error, 0 warnings)

",
}
`;
